--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,17 @@
   text-transform: capitalize;
 }
 
+:root{
+  --dx-color: red;
+  --bgcolor: #8a1538;
+  --black:#130f40;
+  --light-color:#666;
+  --box-shadow:0 .5rem 1.5rem rgba(0,0,0,.1);
+  --border:.2rem solid rgba(39, 14, 182, 0.1);
+  --outline:.1rem solid rgba(0,0,0,.1);
+  --outline-hover:.2rem solid var(--black);
+}
+
 body {
   font-family: "Karla", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -275,9 +286,78 @@ section{
   color: #f1534d;
 }
 
-
-
-
-
-
 /* -------------------------------------HOME CSS END----------------------------- */
+
+
+
+/* -------------------------------------PRODUCT CSS START----------------------------- */
+
+section{
+  padding: 2rem 9%;
+}
+html{
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+  scroll-padding-top: 7rem;
+}
+.product .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
+  gap:1rem;
+}
+
+.product .box-container .box{
+  padding: 1.5rem .5rem;
+  border-radius: .3rem;
+  background: #fff;
+  box-shadow: var(--box-shadow);
+  outline-offset: -.3rem;
+  text-align: center;
+}
+
+.product .box-container .box:hover{
+  outline: var(--outline-hover);
+  outline-offset: 0rem;
+  
+}
+
+.product .box-container .box img{
+  margin: 1rem 0;
+  height: 15rem;
+}
+
+.product .box-container .box h3{
+  font-size: 1.5rem;
+  color: var(--black);
+  line-height: 1.8;
+}
+
+.product .box-container .box p{
+  font-size: 1.2rem;
+  color: var(--light-color);
+  line-height: 1.8;
+  padding: 1rem 0;
+}
+
+.mybtns{
+  margin-top: 1rem;
+  display: inline-block;
+  padding: .2rem .5rem;
+  font-size: 1.5rem;
+  border-radius: .5rem;
+  border: .2rem solid var(--bgcolor);
+  color: var(--bgcolor);
+  cursor: pointer;
+  background: none;
+}
+
+.mybtns:hover{
+  background: var(--bgcolor);
+  color: #fff;
+}
+
+
+
+
+
+/* -------------------------------------PRODUCT CSS END----------------------------- */
