--- a/src/App.css
+++ b/src/App.css
@@ -411,7 +411,60 @@ html{
   font-size: 1.7rem;
 }
 
-
-
-
 /* -------------------------------------REVIEW CSS END----------------------------- */
+
+
+
+
+
+
+/* -------------------------------------CONTACT CSS START----------------------------- */
+
+.contact-box{
+  /* width: 500px; */
+  width: 40%;
+  background-color: #fff;
+  box-shadow: 0 0 20px 0 #999;
+  position: absolute;
+  align-items: center;
+  right: 30%;
+}
+
+form{
+  margin: 35px;
+}
+
+.input-field{
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 1px solid #777;
+  border-radius: 14px;
+  outline: none;
+  align-items: center;
+}
+
+.textarea-field{
+  height: 150px;
+  padding-top: 10px;
+}
+
+.btn{
+  border-radius: 20px;
+  color: #fff;
+  margin-top: 18px;
+  padding: 10px;
+  background-color: orangered;
+  font-size: 12px;
+  border: none;
+  cursor: pointer;
+}
+
+
+
+
+
+
+/* -------------------------------------CONTACT CSS END----------------------------- */
