--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
     display: flex;
     align-items: center;
     position: relative;
-    padding: 0.5rem 0rem;
+    padding: 0.7rem 0rem;
     background-color: #fff;
     color: #3e6aa9;
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
@@ -46,8 +46,8 @@ body {
 
   .brand-name {
     text-decoration: none;
-    color: #3e6aa9;
-    font-size: 1.3rem;
+    color: var(--orange);
+    font-size: 2.5rem;
     margin-left: 1rem;
   }
   .navigation-menu {
@@ -66,6 +66,8 @@ body {
     text-decoration: none;
     display: block;
     width: 100%;
+    font-size: 2rem;
+    color: var(--orange);
   }
 
   .hamburger {
@@ -165,8 +167,8 @@ section{
   background: url(./assets/img/p1.png) no-repeat ;
   background-position: center;
   background-size: cover;
-  padding-top: 5rem;
-  padding-bottom: 4rem;
+  padding-top: 8rem;
+  padding-bottom: 15rem;
 }
 
 .home .content{
@@ -176,7 +178,7 @@ section{
 
 .home .content h3{
   color: rgb(21, 230, 230);
-  font-size: 2.7rem;
+  font-size: 5rem;
 }
 
 .home .content h3 span{
@@ -186,7 +188,7 @@ section{
 
 .home .content p{
   color: rgb(160, 207, 31);
-  font-size: 1.5rem;
+  font-size: 2rem;
   padding: 1rem 0;
   line-height: 1.2;
 }
@@ -194,19 +196,19 @@ section{
 .mybtn{
   margin-top: 1rem;
   display: inline-block;
-  padding: .3rem .5rem;
-  font-size: 1.5rem;
+  padding: 1rem 2rem;
+  font-size: 1.7rem;
   border-radius: .5rem;
   border: .2rem solid rgb(173, 12, 12);
-  color: rgb(30, 212, 100);
+  color:  #fff;
   cursor: pointer;
   background: none;
-  color: rgb(190, 84, 22);
+  background-color: #f1534d;
   text-decoration: none;
 }
 
 .mybtn:hover{
-  background: #FF5349;
+  background: orangered;
   color: #fff;
 }
 
@@ -421,7 +423,6 @@ html{
 /* -------------------------------------CONTACT CSS START----------------------------- */
 
 .contact-box{
-  /* width: 500px; */
   width: 40%;
   background-color: #fff;
   box-shadow: 0 0 20px 0 #999;
